<resources>
    <string name="app_name">30 Day Weight Loss - Run Diet</string>
    <string name="avty_landing_btn_begin">BEGIN LOSE WEIGHT</string>
    <string name="avty_landing_intro_title">How can we help you to lose weight?</string>
    <string name="avty_landing_intro_content">
        "This is a weight loss program that incorporates HIIT exercise and nutrition diet. We will guide you day by day through the entire weight loss process and also show you how to eat to maximise fat loss.

        Our HIIT exercise is a form of simple high intensity interval training which speeds up your metabolic rate and boosts your metabolism for up to 24 hours. This means you\'ll be burning fat even after you\'ve finished the run and walk.

        On the other hand, our diet plan consists of lots of high fiber and protein food, which will let you eat without getting fat.

        No more going hungry just to lose weight!"
    </string>
    <string name="avty_details_title">Personal Details</string>
    <string name="avty_details_instruction">Input your details to customize your training plan.</string>
    <string name="avty_details_weight_title">Weight</string>
    <string name="avty_details_height_title">Height</string>
    <string name="avty_details_weight_kg_hint">Your weight in kg</string>
    <string name="avty_details_weight_pounds_hint">Your weight in pound</string>
    <string name="avty_details_height_cm_hint">Your height in cm</string>
    <string name="avty_details_height_foot_hint">Height in feet</string>
    <string name="avty_details_height_inch_hint">Height in inch</string>
    <string name="avty_details_age_hint">Your age</string>
    <string name="avty_details_age_title">Age</string>
    <string name="avty_details_gender_title">Gender</string>
    <string name="avty_details_empty_error">Please make sure all fields are filled before you continue.</string>
    <string name="avty_details_invalid_error">Some of the values are not valid, please check and try again.</string>
    <string name="avty_main_btn_meal_plan">MEAL PLAN</string>
    <string name="avty_main_btn_running_plan1">START</string>
    <string name="avty_main_btn_running_plan2">RUN</string>
    <string name="avty_main_calories_counter_title">Calories Counter</string>
    <string name="avty_main_customized_plan_title">Slimming Plan For</string>
    <string name="avty_main_btn_rerun">RUN AGAIN</string>
    <string name="avty_main_rerun_msg_title">Run Day %s Plan Again?</string>
    <string name="avty_main_rerun_msg_content">You had completed this run before, are you sure you want to run again?</string>
    <string name="avty_meal_title">Day %s Meal Plan</string>
    <string name="avty_meal_tip_of_the_day">TIP OF THE DAY</string>
    <string name="avty_meal_shopping_list_day_x_to_day_x">Day %1$s to %2$s Shopping List</string>
    <string name="avty_meal_breakfast">Breakfast</string>
    <string name="avty_meal_morning_snack">Morning Snack</string>
    <string name="avty_meal_lunch">Lunch</string>
    <string name="avty_meal_evening_snack">Evening Snack</string>
    <string name="avty_meal_dinner">Dinner</string>
    <string name="avty_meal_ingredients">Ingredient</string>
    <string name="avty_meal_quantity">Quantity</string>
    <string name="avty_meal_meal_plan_calories">Meal plan calories </string>
    <string name="avty_meal_daily_calories">Calories you need/day</string>
    <string name="avty_meal_loss_calories">You have lost</string>
    <string name="avty_ready_title">Day %s run starting in. . .</string>
    <string name="avty_tutorial_title">Running Tutorial</string>
    <string name="avty_tutorial_end_text">Start Run</string>
    <string name="avty_tutorial_introduction_title">Quick Tutorial</string>
    <string name="avty_tutorial_introduction_content">Welcome to 30 days running weight loss! We adapt HIIT exercise method to maximize calorie burn in our running plan, which means each running involves several states, represented by different colors. The running plan will vary depending on the information you have input. </string>
    <string name="avty_tutorial_warm_up_explain">Warm up phase is represented by LIGHT ORANGE color. At this point, do some stretching and slow run as this phase is important to prevent injury.</string>
    <string name="avty_tutorial_walk_explain">Walk phase is represented by LIGHT GREEN color. Please walk with your normal walking speed.</string>
    <string name="avty_tutorial_fast_walk_explain">Fast Walk phase is represented by DARK GREEN color. You should try to walk with your maximum possible speed during this phase.</string>
    <string name="avty_tutorial_run_explain">Run phase is represented by LIGHT RED color. Run at your normal speed during this phase.</string>
    <string name="avty_tutorial_sprint_explain">Sprint phase is represented by DARK RED color. Run with your FULL SPEED during this phase.</string>
    <string name="avty_tutorial_cool_down_explain">Cool down phase is represented by BLUE color. Gradually slow down your run/walk in this final exercise phase.</string>
    <string name="avty_running_mins_remain">Mins Remaining</string>
    <string name="avty_running_calories_burnt">Calories Burnt (Kcal)</string>
    <string name="avty_running_hold_to_unlock">(Hold to Unlock)</string>
    <string name="avty_running_unlock_first">Unlock First</string>
    <string name="avty_running_give_up_title">Give up?</string>
    <string name="avty_running_give_up_content">Confirm giving up on this exercise?</string>
    <string name="avty_result_title">Day %s run result</string>
    <string name="avty_result_day_x">DAY %s RUN</string>
    <string name="avty_result_calories_burn_title">Calories Burn</string>
    <string name="avty_result_exercise_duration_title">Run Duration</string>
    <string name="avty_exercise_result_suggest_decrease_difficulty">Remember that you can always adjust the difficulty in Settings Page if the running plan is too difficult for you.</string>
    <string name="avty_graph_title">Graph History</string>
    <string name="avty_graph_subtitle">Calories burn by each day plan</string>
    <string name="avty_history_title">Run History</string>
    <string name="avty_history_delete_title">Delete History Record</string>
    <string name="avty_history_delete_content">"Are you sure you want to delete this record? Total run time and calories recorded until now will be affected."</string>
    <string name="avty_photo_title">Day %s of you</string>
    <string name="layout_history_no_records_msg">No record found....</string>
    <string name="layout_history_date_title">Date</string>
    <string name="layout_history_plan_title">Plan</string>
    <string name="layout_history_is_completed_title">Completed</string>
    <string name="layout_history_duration_title">Duration</string>
    <string name="layout_history_calories_title">Calories</string>
    <string name="summary_total_calories_burnt">Total Calories Burnt</string>
    <string name="summary_total_exercise_duration">Total Run Duration</string>
    <string name="avty_photo_confirm_delete_title">Delete photo?</string>
    <string name="avty_photo_confirm_delete_content">Confirm delete day %s photo of yours?</string>
    <string name="avty_gallery_title">Gallery</string>
    <string name="avty_settings_title">Settings</string>
    <string name="avty_settings_remind_meal_content">Remind me what to eat!</string>
    <string name="avty_settings_remind_meal_title">Enable Meal Plan Notifications</string>
    <string name="avty_settings_remind_run_content">Remind me to run!</string>
    <string name="avty_settings_remind_run_title">Enable Running Notifications</string>
    <string name="avty_settings_remind_time_title">Running Time</string>
    <string name="avty_settings_remind_day_title">Days</string>
    <string name="avty_settings_parameter_title">Personal Details</string>
    <string name="avty_settings_parameter_content">Tap to edit</string>
    <string name="avty_settings_details_category_title">Personal Details</string>
    <string name="avty_settings_notification_category_title">Notification Settings</string>
    <string name="avty_settings_difficulties_category_title">Difficulty</string>
    <string name="avty_settings_run_difficulty_title">Run Difficulty Level</string>
    <string name="avty_settings_run_history_section_title">Saves</string>
    <string name="avty_settings_run_history_title">Run Save Slots</string>
    <string name="avty_settings_run_history_content">Want to retry the 30 days challenge without losing your previous run record? Tap here to use another save slot</string>
    <string name="avty_run_history_title">Run Save Slots</string>
    <string name="avty_run_history_slot">Slot</string>
    <string name="difficulty_1">Normal</string>
    <string name="difficulty_2">Hard</string>
    <string name="difficulty_3">Very Hard</string>
    <string name="difficulty_4">Hardcore</string>
    <string name="difficulty_5">Extreme</string>
    <string name="dialog_increase_difficulty_content">
        Is today\'s running plan too easy for you? Do you want to increase the difficulty of the following running plan? \n(You may also adjust the difficulty later in Settings page)</string>
    <string name="dialog_increase_difficulty_title">Increase running difficulty?</string>
    <string name="dialog_increase_difficulty_no_btn">No, current running plan is fine.</string>
    <string name="dialog_increase_difficulty_yes_btn">Yes, please increase the difficulty!</string>
    <string name="dialog_rating_rate_play_store_btn">Rate Us In Play Store</string>
    <string name="dialog_rating_cancel_btn">No thanks</string>
    <string name="dialog_rating_title">Rate Our App</string>
    <string name="dialog_rating_content">If you enjoy using this app, would you mind taking a moment to rate this app? It won\'t take longer than a minute. Thank you for your support!</string>
    <string name="drawer_title_day_x_plan">Day %s Plan</string>
    <string name="drawer_title_history">History</string>
    <string name="drawer_item_gallery">Gallery</string>
    <string name="drawer_item_history_list">List History</string>
    <string name="drawer_item_history_graph">Graph History</string>
    <string name="drawer_title_tutorial">Tutorial</string>
    <string name="drawer_item_exercise_tutorial">Running Tutorial</string>
    <string name="drawer_title_more">More</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_pro_version">Pro + Remove Ads</string>
    <string name="drawer_title_miscellaneous">Miscellaneous</string>
    <string name="drawer_item_share">Share</string>
    <string name="drawer_item_rate">Rate us</string>
    <string name="drawer_item_contact">Contact us</string>
    <string name="drawer_item_about">About us</string>
    <string name="tip_olive_oil">Average Greek consumes more than 20 liters of olive oil a year - that is why the spartans look so toned! We have included it in your meal plan today, check it out!</string>
    <string name="tip_coffee">Coffee can increase body fat burn by as much as 10% in obese individuals, but drinking too much will give you insomnia at night. Follow our meal plan today to burn fats and sleep soundly tonight!</string>
    <string name="tip_almonds">Almonds consumed as snacks reduce hunger and desire to eat later in the day, so you never have to reach for that chocolate bar sprinkled with sugar. Almond is included in our meal plan today, check it out now.</string>
    <string name="tip_brown_rice">Brown rice is an excellent source of dietary fibre as it tends to fill you up more and has been associated with decreased food intake and maintenance of a healthy body weight. Brown is the new white, so check out our brown rice meal today!</string>
    <string name="next">Next</string>
    <string name="dont_ask_me_again">Don\'t ask me again</string>
</resources>