<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        app:srcCompat="@drawable/abslady"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="0dp"
        android:id="@+id/imageView6"
        android:scaleType="centerCrop"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.challenge.bennho.a30days.activities.LandingActivity"
        android:clipChildren="false"
        android:clipToPadding="false">

        <include
            android:id="@+id/my_toolbar"
            layout="@layout/my_toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:id="@+id/layoutContainer"
            android:layout_weight="1"
            android:gravity="bottom">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAction"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:id="@+id/layoutIntroduction"
                    android:layout_gravity="bottom">

                    <TextView
                        android:text="@string/avty_landing_intro_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView"
                        android:textColor="@color/colorBtnWord"
                        android:textStyle="normal|bold"
                        android:textSize="24sp"
                        android:fontFamily="sans-serif-condensed" />

                    <TextView
                        android:text="@string/avty_landing_intro_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView11"
                        android:textColor="@color/colorBtnWord"
                        android:layout_marginTop="10dp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right|center_vertical"
                        android:paddingRight="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/layoutNext">

                        <ImageView
                            app:srcCompat="@drawable/continue_icon"
                            android:id="@+id/imageView16"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="10dp" />

                        <TextView
                            android:text="@string/next"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView12"
                            android:textColor="@color/colorBtnWord"
                            android:textStyle="normal|bold" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

            <Button
                android:text="@string/avty_landing_btn_begin"
                android:id="@+id/btnBegin"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:background="@color/colorAction"
                android:textColor="@color/colorBtnWord"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="1.0"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="visible"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/adLayout"
            android:background="#000"
            android:layout_height="0dp">

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>


